# pog_os

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: allocator.rs  apic.rs  framebuffer.rs  gdt.rs  input.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pic.rs  serial.rs
kernel/src/ata/: mod.rs  pio.rs
kernel/src/ata/filesystem/: mod.rs
kernel/src/pci/: mod.rs
kernel/src/pci/filesystem/: mod.rs
kernel/src/task/: console.rs  executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/: main.rs
