[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["WorksByM <wittki56@gmail.com>"]

[dependencies]
acpi = "5.0.0"
bootloader_api = "0.11.7"
noto-sans-mono-bitmap = "0.3.0"
volatile = "0.5.1"
x86_64 = "0.15.1"
uart_16550 = "0.3.0"
spinning_top = "0.3.0"
generic_once_cell = "0.1.1"